--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "description": "A client for the Curse communications app",
   "main"    : "main.js",
   "author"  : "eyesigil",
+  "license" : "MIT",
   "repository": {
     "type": "git",
     "url": "https://github.com/eye-sigil/curse-linux.git"
-  },
+  }
 }
