--- a/package.json
+++ b/package.json
@@ -1,13 +1,5 @@
 {
   "name"    : "curse-linux",
-  "productname": "Curse",
-  "version" : "0.0.1",
-  "description": "A client for the Curse communications app",
-  "main"    : "main.js",
-  "author"  : "eyesigil",
-  "license" : "MIT",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/eye-sigil/curse-linux.git"
-  }
+  "version" : "0.1.0",
+  "main"    : "main.js"
 }
